@@ -1,4 +1,5 @@
 Development
+	Flip to streaming mode when we get a sequence starting with "Content-length"
 	Fix video/mpeg declaration
 	More mimetype cleanup
 	Add audio/ogg and video/ogg mimetypes
